# vulkan_depth_render

./: .gitignore  CMakeLists.txt  Makefile  README.md
flightplans/: dhl_3dtrack_full.json
include/: parse_flightplan.h  vk_cuda_interop.h  vk_engine.h  vk_initializers.h  vk_pipelines.h  vk_types.h
python/: vertex_shader_test.py
shaders/: depth.vert  depth.vert.spv
src/: main_vulkan_test.cpp  parse_flightplan.cpp  vk_cuda_interop.cpp  vk_engine.cpp  vk_images.cpp  vk_initializers.cpp  vk_pipelines.cpp
